--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -1,3 +1,8 @@
 .album-collection {
-  border: red solid 1px;
+  background: rgba(255, 255, 255, 0.664);
+  border: white solid 1px;
+  display: inline-block;
+  margin: 10px;
+  width: auto;
 }
+
